fix: improve readability

--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@
 
 #article_content {
     text-align: justify;
-    word-break: break-all;
+    word-break: keep-all;
 }
 
-#article_content > h2 {
+#article_content > h2,
+#article_content > h1 {
     margin-top: 4rem;
 }
 
